Added multi inputs file upload

--- a/MVCFileUpload/MVCFileUpload/MVCFileUpload.csproj
+++ b/MVCFileUpload/MVCFileUpload/MVCFileUpload.csproj
@@ -161,6 +161,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\MultiFileItemModel.cs" />
+    <Compile Include="Models\MultiFileModel.cs" />
     <Compile Include="Models\UploadModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -202,6 +204,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\Complex.cshtml" />
+    <Content Include="Views\Home\MultiInputs.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
