Added more functionalities

--- a/MongoCRUD/MongoCRUD/MongoCRUD.csproj
+++ b/MongoCRUD/MongoCRUD/MongoCRUD.csproj
@@ -50,6 +50,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Collections\Person.cs" />
+    <Compile Include="Enums.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
