Added some other alternatives for file upload

--- a/MVCFileUpload/MVCFileUpload/MVCFileUpload.csproj
+++ b/MVCFileUpload/MVCFileUpload/MVCFileUpload.csproj
@@ -178,9 +178,11 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\form_data.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.iframe-transport.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -207,6 +209,8 @@
     <Content Include="Views\Home\Complex.cshtml" />
     <Content Include="Views\Home\MultiInputs.cshtml" />
     <Content Include="Views\Document\FileList.cshtml" />
+    <Content Include="Views\Home\Ajax.cshtml" />
+    <Content Include="Views\Home\AjaxUploadIFrame.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
